fixed loading image, rm lazyload,fixed img wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,8 +10,13 @@
   
 #loading {
   display: none;
+  text-align: center; /* Center the contents horizontally */
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  max-width: 600px;
+  max-height: 600px;
 }
-
 
   footer {
       position: relative;
@@ -74,10 +79,12 @@
   .listContainer {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: row;
     margin-left: auto;
+    margin-bottom: 10px;
+    margin-top: 20px;
     margin-right: auto;
     width: 50%;
+
   }
